Fixed scrollbar blink

--- a/src/assets/styles/index.pcss
+++ b/src/assets/styles/index.pcss
@@ -3,6 +3,10 @@
 
 @import './theme-variables.pcss';
 
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 html,
 body {
   box-sizing: border-box;
